@@ -9,10 +9,12 @@ set_target_properties(qtcurve PROPERTIES PREFIX "")
 
 if (KDE4_FOUND)
     install(FILES qtcurve.themerc DESTINATION ${DATA_INSTALL_DIR}/kstyle/themes)
-    set(QTC_KDE_LIBS ${KDE4_KDEUI_LIBS})
-    if (NOT QTC_DISABLE_KDEFILEDIALOG_CALLS)
-        set(QTC_KFILEDIALOG_LIBS ${KDE4_KIO_LIBS} ${KDE4_KDECORE_LIBS} ${KDE4_KFILE_LIBS})
-    endif (NOT QTC_DISABLE_KDEFILEDIALOG_CALLS)
+    if (NOT QTC_NO_KDE4_LINKING)
+        set(QTC_KDE_LIBS ${KDE4_KDEUI_LIBS})
+        if (NOT QTC_DISABLE_KDEFILEDIALOG_CALLS)
+            set(QTC_KFILEDIALOG_LIBS ${KDE4_KIO_LIBS} ${KDE4_KDECORE_LIBS} ${KDE4_KFILE_LIBS})
+        endif (NOT QTC_DISABLE_KDEFILEDIALOG_CALLS)
+    endif (NOT QTC_NO_KDE4_LINKING)
 endif (KDE4_FOUND)
 
 target_link_libraries(qtcurve ${QTC_KDE_LIBS} ${QTC_KFILEDIALOG_LIBS} ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} ${X11_X11_LIB})
